Boutons par défaut v2

--- a/application/views/scripts/calendrier-des-commissions/alertsuppression.phtml
+++ b/application/views/scripts/calendrier-des-commissions/alertsuppression.phtml
@@ -11,4 +11,4 @@ Cela entrainera la suppression de toutes les dates de commissions dans les dossi
 L'ensemble des pièces jointes liées à cette date sera supprimé.<br/>
 <br/>
 <button class='btn btn-danger' id='validSupp'>Supprimer</button>
-<button class='btn' id='cancelSupp'>Annuler</button>
+<button class='btn btn-default' id='cancelSupp'>Annuler</button>
