--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -1,6 +1,6 @@
 <?php if( !$this->ajax && $this->verrou == 0) : ?>
-	<p style='float: right;' ><a id='add-contact' class='btn' href="/contact/form?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>">Ajouter un nouveau contact</a></p>
-	<p style='float: right; margin-right: 1em' ><a id='add-contact-existant' class='btn' href="/contact/form?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>">Ajouter un contact existant</a></p>
+	<p style='float: right;' ><a id='add-contact' class='btn btn-default' href="/contact/form?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>">Ajouter un nouveau contact</a></p>
+	<p style='float: right; margin-right: 1em' ><a id='add-contact-existant' class='btn btn-default' href="/contact/form?item=<?php echo $this->item ?>&id=<?php echo $this->id ?>">Ajouter un contact existant</a></p>
 <?php endif ?>
 
 <div style='clear: both'></div>
