--- a/application/views/scripts/couches-cartographiques/change-order.phtml
+++ b/application/views/scripts/couches-cartographiques/change-order.phtml
@@ -19,7 +19,7 @@
     </table>
 
     <div class='btn-group pull-right'>
-        <a class='btn' href="<?php echo $this->url(array('action' => 'list')) ?>">Revenir sur la liste des couches cartographiques</a>
+        <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'list')) ?>">Revenir sur la liste des couches cartographiques</a>
         <button type='submit' class='btn btn-success'>Sauvegarder</button>
     </div>
 </form>
