--- a/application/views/scripts/dossier/edit-textes-applicables.phtml
+++ b/application/views/scripts/dossier/edit-textes-applicables.phtml
@@ -1,7 +1,7 @@
 <form action='<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>' method='post'>
     <div class='action-buttons pull-right'>
         <div class="btn-group">
-            <a class='btn' href="<?php echo $this->url(array('action' => 'textes-applicables')) ?>">Annuler la modification</a>
+            <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'textes-applicables')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
         </div>
     </div>
