--- a/application/views/scripts/dossier/liees-doss.phtml
+++ b/application/views/scripts/dossier/liees-doss.phtml
@@ -4,7 +4,7 @@
 		<form name='listeDossierCheckBox' method='POST' action='/dossier/liees/id/".$this->idDossier."'>
 		<input type='hidden' name='do' id='do' value='saveDossLink' />
 		<div style='float:right;'>
-			<a class='btn' href='/dossier/liees/id/".$this->idDossier."'>Annuler</a>
+			<a class='btn btn-default' href='/dossier/liees/id/".$this->idDossier."'>Annuler</a>
 			<input type='submit' class='btn btn-success' name='saveLink' value='Sauvegarder les liaisons' />
 		</div>
 	";
