--- a/application/views/scripts/dossier/liees.phtml
+++ b/application/views/scripts/dossier/liees.phtml
@@ -323,7 +323,7 @@ echo "
 					echo $this->partialLoop('dossier/results/etablissement.phtml', $this->etablissement['etablissement_lies']);
 					echo "
 						</ul>
-						<button class='btn' id='save-liens' >Sauvegarder les liaisons</button>
+						<button class='btn btn-default' id='save-liens' >Sauvegarder les liaisons</button>
 						</form>
 						<br/><br/><br/><br/>
 					";
@@ -415,7 +415,7 @@ echo "
 			</div>
 			<br/>
 			<div class='grid_14 alpha form'>
-				<a class='btn' href='/dossier/liees-doss/id/".$this->infosDossier['ID_DOSSIER']."' >Lier à un dossier</a>
+				<a class='btn btn-default' href='/dossier/liees-doss/id/".$this->infosDossier['ID_DOSSIER']."' >Lier à un dossier</a>
 			</div>
 			<hr class='clear'/>
 		</div>
