--- a/application/views/scripts/dossier/prescriptionaddtype.phtml
+++ b/application/views/scripts/dossier/prescriptionaddtype.phtml
@@ -14,7 +14,7 @@
                     <?php endif ?>
                     <td rowspan='<?php echo $nbAssoc ?>' class='span<?php echo $this->typePrescDossier > 0 ? 5 : 6 ?>'><?php echo nl2br($this->libelle) ?></td>
                     <td class='col-md-1' rowspan='<?php echo $nbAssoc ?>'>
-                        <a class='btn' href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'prescription-edit', 'id-prescription' => $this->idPrescriptionDossier, 'id' => $this->idDossier)) ?>' >Modifier</a>
+                        <a class='btn btn-default' href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'prescription-edit', 'id-prescription' => $this->idPrescriptionDossier, 'id' => $this->idDossier)) ?>' >Modifier</a>
                     </td>
                     <?php $cpt = false; ?>
 		<?php endif ?>
