--- a/application/views/scripts/dossier/textes-applicables.phtml
+++ b/application/views/scripts/dossier/textes-applicables.phtml
@@ -1,5 +1,5 @@
 <div class='action-buttons pull-right'>
-    <a class='btn' href="<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>">Modifier les textes applicables</a>
+    <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>">Modifier les textes applicables</a>
 </div>
 
 <h3>Textes applicables</h3>
