--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-original.phtml
@@ -2,7 +2,7 @@
 
     <div class='action-buttons pull-right'>
         <div class="btn-group">
-            <a class='btn' href="<?php echo $this->url(array('action' => 'descriptif')) ?>">Annuler la modification</a>
+            <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'descriptif')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
         </div>
     </div>
