--- a/application/views/scripts/etablissement/dossiers.phtml
+++ b/application/views/scripts/etablissement/dossiers.phtml
@@ -1,6 +1,6 @@
 <input name = "idEtablissement" type="hidden" value=<?php echo($this->etablissement['general']['ID_ETABLISSEMENT'])?> />
 <div class='pull-right'>
-    <a class='btn' href="<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>">Ajouter un dossier</a>
+    <a class='btn btn-default' href="<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>">Ajouter un dossier</a>
 </div>
 
 <h3>Liste des dossiers</h3>
