--- a/application/views/scripts/etablissement/edit-contacts.phtml
+++ b/application/views/scripts/etablissement/edit-contacts.phtml
@@ -3,7 +3,7 @@
 		<a href='<?php echo $this->url(array('action' => 'add-contact')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" >Ajouter un nouveau contact</a>
 		<a href='<?php echo $this->url(array('action' => 'add-contact-existant')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" >Ajouter contact existant</a>
 	</div>
-    <a class='btn' href="<?php echo $this->url(array('action' => 'contacts')) ?>">Revenir sur l'affichage des contacts</a>
+    <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'contacts')) ?>">Revenir sur l'affichage des contacts</a>
 </div>
 
 <h3>Gestion des contacts</h3>
