--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement-edit.phtml
@@ -1,7 +1,7 @@
 <form action='<?= $this->url(array('action' => 'effectifs-degagements-etablissement-edit')) ?>' method='post' class='form-horizontal'>
     <div class='action-buttons pull-right'>
         <div class="btn-group">
-            <a class='btn' href="<?= $this->url(array('action' => 'effectifs-degagements-etablissement')) ?>">Annuler la modification</a>
+            <a class='btn btn-default' href="<?= $this->url(array('action' => 'effectifs-degagements-etablissement')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
         </div>
     </div>
