--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
@@ -1,5 +1,5 @@
 <div class='action-buttons pull-right'>
-    <a class='btn' href="<?= $this->url(array('action' => 'effectifs-degagements-etablissement-edit')) ?>">Modifier les effectifs et dégagements</a>
+    <a class='btn btn-default' href="<?= $this->url(array('action' => 'effectifs-degagements-etablissement-edit')) ?>">Modifier les effectifs et dégagements</a>
 </div>
 
 <div id='descriptif-personnalise'>
