--- a/application/views/scripts/etablissement/pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/pieces-jointes.phtml
@@ -1,5 +1,5 @@
 <div class='pull-right' >
-    <a class='btn' href="<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>">Gestion des pièces jointes</a>
+    <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>">Gestion des pièces jointes</a>
 </div>
 
 <h3>Pièces jointes</h3>
