--- a/application/views/scripts/gestion-des-documents/index.phtml
+++ b/application/views/scripts/gestion-des-documents/index.phtml
@@ -1,6 +1,6 @@
 <!-- Titre -->
 <span style="float: right">
-	<a id='button-aud' class='btn' >Ajouter un document</a>
+	<a id='button-aud' class='btn btn-default' >Ajouter un document</a>
 </span>
 
 <h3 class='page-header'>Gestion des documents</h3>
