--- a/application/views/scripts/gestion-prescriptions/gestion-rappel-reg.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-rappel-reg.phtml
@@ -59,7 +59,7 @@
 								".( ($listePrescr[$i][0]['PRESCRIPTIONREGL_VISIBLE'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."
 							</td>
 							<td class='col-md-1' rowspan='".$nbAssoc."'>
-								<a class='btn' href='/gestion-prescriptions/gestion-rappel-reg-edit/id/".$listePrescr[$i][$j]['ID_PRESCRIPTIONREGL']."' >Modifier</a>
+								<a class='btn btn-default' href='/gestion-prescriptions/gestion-rappel-reg-edit/id/".$listePrescr[$i][$j]['ID_PRESCRIPTIONREGL']."' >Modifier</a>
 							</td>
 						";
 						$cpt = false;
