--- a/application/views/scripts/groupement/index.phtml
+++ b/application/views/scripts/groupement/index.phtml
@@ -2,7 +2,7 @@
 
 <span id='notif' class='ui-state-highlight' style='padding: 0.3em; display:none'></span>
 
-<p class='pull-right'><br/><a href='#' id='new' class='btn' >Créer un nouveau groupement</a></p>
+<p class='pull-right'><br/><a href='#' id='new' class='btn btn-default' >Créer un nouveau groupement</a></p>
 <h3 class='page-header'>Groupements de communes</h3>
 
 <div id='save_div'>
