--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -2,8 +2,8 @@
 <input type='hidden' name='idLinkPJ' id='idLinkPJ' value='<?php echo $this->identifiant ?>' />
 
 <h3>Liste de pièces jointes
-    <button id='addPJ' class='btn' >Ajouter une piece jointe</button>
-    <button id='addPJQuick' class='btn' >Ajout rapide</button>
+    <button id='addPJ' class='btn btn-default' >Ajouter une piece jointe</button>
+    <button id='addPJQuick' class='btn btn-default' >Ajout rapide</button>
 
     <?php if (
         $this->displayDownloadButton
