--- a/application/views/scripts/dossier/edit-verifications-techniques.phtml
+++ b/application/views/scripts/dossier/edit-verifications-techniques.phtml
@@ -1,7 +1,7 @@
 <form action='<?= $this->url(array('action' => 'edit-verifications-techniques')) ?>' method='post' class='form-horizontal'>
     <div class='action-buttons pull-right'>
         <div class="btn-group">
-            <a class='btn' href="<?= $this->url(array('action' => 'verifications-techniques')) ?>">Annuler la modification</a>
+            <a class='btn btn-default' href="<?= $this->url(array('action' => 'verifications-techniques')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
         </div>
     </div>
