--- a/application/views/scripts/dossier/verifications-techniques.phtml
+++ b/application/views/scripts/dossier/verifications-techniques.phtml
@@ -1,5 +1,5 @@
 <div class='action-buttons pull-right'>
-    <a class='btn' href="<?= $this->url(array('action' => 'edit-verifications-techniques')) ?>">Modifier les vérifications techniques</a>
+    <a class='btn btn-default' href="<?= $this->url(array('action' => 'edit-verifications-techniques')) ?>">Modifier les vérifications techniques</a>
 </div>
 
 <div id='descriptif-personnalise'>
