--- a/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
@@ -1,5 +1,5 @@
 <div class='action-buttons pull-right'>
-    <a class='btn' href="<?php echo $this->url(array('action' => 'edit-descriptif')) ?>">Modifier les descriptifs</a>
+    <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'edit-descriptif')) ?>">Modifier les descriptifs</a>
 </div>
 
 <h3>Descriptifs</h3>
