--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -1,7 +1,7 @@
 <div class='pull-right' >
     <a id="addPJQuick" class="btn btn-default"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajout rapide</a>
     <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
-    <a class='btn' href="<?php echo $this->url(array('action' => 'pieces-jointes')) ?>">Revenir sur l'affichage des pièces jointes</a>
+    <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'pieces-jointes')) ?>">Revenir sur l'affichage des pièces jointes</a>
 </div>
 
 <h3>Gestion des pièces jointes</h3>
