--- a/application/views/scripts/gestion-des-commissions/index.phtml
+++ b/application/views/scripts/gestion-des-commissions/index.phtml
@@ -1,7 +1,7 @@
 <!-- Titre -->
 <span style="float: right">
     <br/>
-	<button id='button-gdc' class='btn' >Gestion des commissions</button>
+	<button id='button-gdc' class='btn btn-default' >Gestion des commissions</button>
 </span>
 
 <h3 class='page-header'>Gestion des commissions</h3>
