--- a/application/views/scripts/gestion-prescriptions/gestion-articles.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-articles.phtml
@@ -30,7 +30,7 @@
 				<div class='row' >
 					<div class='col-md-2' style='text-align:right;'>
 						".( ($article['VISIBLE_ARTICLE'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."
-						<a class='btn' href='/gestion-prescriptions/gestion-articles-edit/id/".$article['ID_ARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</a>
+						<a class='btn btn-default' href='/gestion-prescriptions/gestion-articles-edit/id/".$article['ID_ARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</a>
 					</div>
 					<div class='col-md-10' >".$article['LIBELLE_ARTICLE']."</div>					
 				</div>
