--- a/application/views/scripts/gestion-prescriptions/gestion-textes.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-textes.phtml
@@ -30,7 +30,7 @@
 				<div class='row' >
 					<div class='col-md-2' style='text-align:right;'>
 						".( ($texte['VISIBLE_TEXTE'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."
-						<a class='btn' href='/gestion-prescriptions/gestion-textes-edit/id/".$texte['ID_TEXTE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</a>
+						<a class='btn btn-default' href='/gestion-prescriptions/gestion-textes-edit/id/".$texte['ID_TEXTE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</a>
 					</div>
 					<div class='col-md-10' >".$texte['LIBELLE_TEXTE']."</div>					
 				</div>
