--- a/application/views/scripts/users/ressources-specialisees.phtml
+++ b/application/views/scripts/users/ressources-specialisees.phtml
@@ -9,7 +9,7 @@
     </li>
 </ul>
 
-<a href='#' onclick='$("#resource-ets-modal").modal({show: true});' class='btn btn-sm pull-right'>Ajouter une ressource</a>
+<button type="button" onclick='$("#resource-ets-modal").modal({show: true});' class='btn btn-sm btn-info pull-right'>Ajouter une ressource</button>
 
 <h4>Ressources liées aux établissements</h4>
 
@@ -34,7 +34,7 @@
     </tbody>
 </table>
 
-<a href='#' onclick='$("#resource-dossier-modal").modal({show: true});' class='btn btn-sm pull-right'>Ajouter une ressource</a>
+<button type="button" onclick='$("#resource-dossier-modal").modal({show: true});' class='btn btn-sm btn-info pull-right'>Ajouter une ressource</button>
 
 <h4>Ressources liées aux dossiers</h4>
 
@@ -60,183 +60,186 @@
 </table>
 
 <!-- Boite d'ajout de ressource etablissement -->
-<form id="resource-ets-modal" class="modal hide fade" action="<?php echo $this->url(array('action' => 'add-ressource-specialisee')) ?>" method='post'>
+<form id="resource-ets-modal" class="modal fade" tabindex="-1" role="dialog" action="<?php echo $this->url(array('action' => 'add-ressource-specialisee')) ?>" method='post'>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">    
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3 class="modal-title">Ajout d'une ressource établissement</h3>
+            </div>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Ajout d'une ressource établissement</h3>
-    </div>
+            <div class="modal-body">
+                <dl class='dl-horizontal'>
+                    <dt>Nom de la ressource</dt>
+                    <dd>
+                        <p>
+                            <input class="form-control" type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
+                        </p>
+                    </dd>
+                </dl>
 
-    <div class="modal-body">
+                <hr/>
 
-        <dl class='dl-horizontal'>
-            <dt>Nom de la ressource</dt>
-            <dd>
                 <p>
-                    <input type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
-                </p>
-            </dd>
-        </dl>
-
-        <hr/>
-
-        <p class='text-center'><strong>Critères sur le genre
-            <select name='genre'> <!-- genre -->
-                <?php foreach( $this->genres as $genre ) : ?>
-                    <option value='<?php echo $genre["ID_GENRE"] ?>'>
-                        <?php echo $genre["LIBELLE_GENRE"] ?>
-                    </option>
-                <?php endforeach ?>
-            </select>
-        </strong></p>
-
-        <dl class='dl-horizontal'>
-
-            <dt class='champs champ_types'>Types d'activité</dt>
-            <dd class='champs champ_types'>
-
-                <div style='height: 200px; overflow-y:none;'>
-                    <dl style='height: 150px; overflow-y: auto;'>
-                        <?php foreach( $this->types as $libelle_type => $_type ) : ?>
-                            <dt style='width: 50px;'><?php echo $libelle_type ?><dt>
-                            <dd style='margin-left: 70px;'>
-                                <ul class='list-unstyled'>
-                                <?php foreach( $_type as $type ) : ?>
-                                    <li>
-                                        <input name='types[]' type='checkbox' value='<?php echo $type["ID_TYPEACTIVITE"] ?>' />
-                                        <?php echo $type["LIBELLE_ACTIVITE"] ?>
-                                    </li>
-                                <?php endforeach ?>
-                                </ul>
-                            </dd>
-                        <?php endforeach ?>
-                    </dl>
-                </div>
-
-            </dd>
-
-            <dt class='champs champ_categorie'>Catégories</dt>
-            <dd class='champs champ_categorie'>
-                <p>
-                    <select name='categories[]' multiple>
-                        <?php foreach($this->categories as $categorie) : ?>
-                            <option value='<?php echo $categorie['ID_CATEGORIE'] ?>'><?php echo $categorie['LIBELLE_CATEGORIE'] ?></option>
+                    <strong>Critères sur le genre</strong>
+                    <select class="form-control" name='genre'>
+                        <?php foreach( $this->genres as $genre ) : ?>
+                            <option value='<?php echo $genre["ID_GENRE"] ?>'>
+                                <?php echo $genre["LIBELLE_GENRE"] ?>
+                            </option>
                         <?php endforeach ?>
                     </select>
                 </p>
-            </dd>
 
-            <dt class="champ_famille champs">Famille</dt>
-            <dd class="champ_famille champs">
-                <select name='familles[]' multiple>
-                    <?php foreach( $this->familles as $item ) : ?>
-                        <option value='<?php echo $item["ID_FAMILLE"] ?>' >
-                            <?php echo $item["LIBELLE_FAMILLE"] ?>
-                        </option>
-                    <?php endforeach ?>
-                </select>
-            </dd>
+                <dl class='dl-horizontal'>
+                    <dt class='champs champ_types'>Types d'activité</dt>
+                    <dd class='champs champ_types'>
+                        <div style='height: 200px; overflow-y:none;'>
+                            <dl style='height: 150px; overflow-y: auto;'>
+                                <?php foreach( $this->types as $libelle_type => $_type ) : ?>
+                                    <dt style='width: 50px;'><?php echo $libelle_type ?><dt>
+                                    <dd style='margin-left: 70px;'>
+                                        <ul class='list-unstyled'>
+                                        <?php foreach( $_type as $type ) : ?>
+                                            <li>
+                                                <input name='types[]' type='checkbox' value='<?php echo $type["ID_TYPEACTIVITE"] ?>' />
+                                                <?php echo $type["LIBELLE_ACTIVITE"] ?>
+                                            </li>
+                                        <?php endforeach ?>
+                                        </ul>
+                                    </dd>
+                                <?php endforeach ?>
+                            </dl>
+                        </div>
+                    </dd>
 
-            <dt class="champ_classe champs">Classe</dt>
-            <dd class="champ_classe champs">
-                <select name='classes[]' multiple>
-                    <?php foreach( $this->classes as $item ) : ?>
-                        <option value='<?php echo $item["ID_CLASSE"] ?>' >
-                            <?php echo $item["LIBELLE_CLASSE"] ?>
-                        </option>
-                    <?php endforeach ?>
-                </select>
-            </dd>
+                    <dt class='champs champ_categorie'>Catégories</dt>
+                    <dd class='champs champ_categorie'>
+                        <p>
+                            <select name='categories[]' multiple>
+                                <?php foreach($this->categories as $categorie) : ?>
+                                    <option value='<?php echo $categorie['ID_CATEGORIE'] ?>'><?php echo $categorie['LIBELLE_CATEGORIE'] ?></option>
+                                <?php endforeach ?>
+                            </select>
+                        </p>
+                    </dd>
 
-            <dt class="champ_classement champs">Classement</dt>
-            <dd class="champ_classement champs">
-                <select name='classements[]' multiple>
-                    <?php foreach( $this->classements as $item ) : ?>
-                        <option value='<?php echo $item["ID_CLASSEMENT"] ?>' >
-                            <?php echo $item["LIBELLE_CLASSEMENT"] ?>
-                        </option>
-                    <?php endforeach ?>
-                </select>
-            </dd>
+                    <dt class="champ_famille champs">Famille</dt>
+                    <dd class="champ_famille champs">
+                        <select name='familles[]' multiple>
+                            <?php foreach( $this->familles as $item ) : ?>
+                                <option value='<?php echo $item["ID_FAMILLE"] ?>' >
+                                    <?php echo $item["LIBELLE_FAMILLE"] ?>
+                                </option>
+                            <?php endforeach ?>
+                        </select>
+                    </dd>
 
-            <dt class='champs champ_commission'>Commissions</dt>
-            <dd class='champs champ_commission'>
-                <select name='commissions'>
-                    <option value='0'>Ignorer les commissions compétentes de l'utilisateur</option>
-                    <option value='1'>Des commissions compétentes de l'utilisateur</option>
-                </select>
-            </dd>
+                    <dt class="champ_classe champs">Classe</dt>
+                    <dd class="champ_classe champs">
+                        <select name='classes[]' multiple>
+                            <?php foreach( $this->classes as $item ) : ?>
+                                <option value='<?php echo $item["ID_CLASSE"] ?>' >
+                                    <?php echo $item["LIBELLE_CLASSE"] ?>
+                                </option>
+                            <?php endforeach ?>
+                        </select>
+                    </dd>
 
-            <dt class='champs champ_adresse'>Groupements</dt>
-            <dd class='champs champ_adresse'>
-                <select name='groupements'>
-                    <option value='0'>Ignorer les groupements de l'utilisateur</option>
-                    <option value='1'>Sur les groupements de l'utilisateur</option>
-                </select>
-            </dd>
+                    <dt class="champ_classement champs">Classement</dt>
+                    <dd class="champ_classement champs">
+                        <select name='classements[]' multiple>
+                            <?php foreach( $this->classements as $item ) : ?>
+                                <option value='<?php echo $item["ID_CLASSEMENT"] ?>' >
+                                    <?php echo $item["LIBELLE_CLASSEMENT"] ?>
+                                </option>
+                            <?php endforeach ?>
+                        </select>
+                    </dd>
 
-            <dt class='champs champ_adresse'>Commune</dt>
-            <dd class='champs champ_adresse'>
-                <select name='commune'>
-                    <option value='0'>Ignorer la commune de l'utilisateur</option>
-                    <option value='1'>Sur la commune de l'utilisateur</option>
-                </select>
-            </dd>
+                    <dt class='champs champ_commission'>Commissions</dt>
+                    <dd class='champs champ_commission'>
+                        <p>
+                            <select class="form-control" name='commissions'>
+                                <option value='0'>Ignorer les commissions compétentes de l'utilisateur</option>
+                                <option value='1'>Des commissions compétentes de l'utilisateur</option>
+                            </select>
+                        </p>
+                    </dd>
 
-        </dl>
+                    <dt class='champs champ_adresse'>Groupements</dt>
+                    <dd class='champs champ_adresse'>
+                        <p>
+                            <select class="form-control" name='groupements'>
+                                <option value='0'>Ignorer les groupements de l'utilisateur</option>
+                                <option value='1'>Sur les groupements de l'utilisateur</option>
+                            </select>
+                        </p>
+                    </dd>
 
+                    <dt class='champs champ_adresse'>Commune</dt>
+                    <dd class='champs champ_adresse'>
+                        <select class="form-control" name='commune'>
+                            <option value='0'>Ignorer la commune de l'utilisateur</option>
+                            <option value='1'>Sur la commune de l'utilisateur</option>
+                        </select>
+                    </dd>
+                </dl>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" data-dismiss="modal" class="btn btn-default">Annuler</button>
+                <input type='hidden' name='type_ressource' value='etablissement' />
+                <input type='submit' value='Ajouter' class='btn btn-success' />
+            </div>
+        </div>
     </div>
-
-    <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
-        <input type='hidden' name='type_ressource' value='etablissement' />
-        <input type='submit' value='Ajouter' class='btn btn-success' />
-    </div>
-
 </form>
 
 <!-- Boite d'ajout de ressource dossier -->
-<form id="resource-dossier-modal" class="modal hide fade" action="<?php echo $this->url(array('action' => 'add-ressource-specialisee')) ?>" method='post'>
+<form id="resource-dossier-modal" class="modal fade" tabindex="-1" role="dialog" action="<?php echo $this->url(array('action' => 'add-ressource-specialisee')) ?>" method='post'>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title">Ajout d'une ressource dossier</h3>
+            </div>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Ajout d'une ressource dossier</h3>
+            <div class="modal-body">
+                <dl class='dl-horizontal'>
+                    <dt>Nom de la ressource</dt>
+                    <dd>
+                        <p>
+                            <input class="form-control" type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
+                        </p>
+                    </dd>
+
+                    <dt>Nature</dt>
+                    <dd>
+                        <p>
+                            <select name='dossier_natures[]' multiple>
+                                <?php foreach($this->natures_dossier as $nature) : ?>
+                                    <option data-type='<?php echo $nature['ID_DOSSIERTYPE'] ?>' value='<?php echo $nature['ID_DOSSIERNATURE'] ?>'><?php echo $nature['LIBELLE_DOSSIERNATURE'] ?></option>
+                                <?php endforeach ?>
+                            </select>
+                        </p>
+                    </dd>
+                </dl>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" data-dismiss="modal" class="btn btn-default">Annuler</button>
+                <input type='submit' value='Ajouter' class='btn btn-success' />
+                <input type='hidden' name='type_ressource' value='dossier' />
+            </div>
+        </div>
     </div>
-
-    <div class="modal-body">
-
-        <dl class='dl-horizontal'>
-            <dt>Nom de la ressource</dt>
-            <dd>
-                <p>
-                    <input type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
-                </p>
-            </dd>
-
-            <dt>Nature</dt>
-            <dd>
-                <p>
-                    <select name='dossier_natures[]' multiple>
-                        <?php foreach($this->natures_dossier as $nature) : ?>
-                            <option data-type='<?php echo $nature['ID_DOSSIERTYPE'] ?>' value='<?php echo $nature['ID_DOSSIERNATURE'] ?>'><?php echo $nature['LIBELLE_DOSSIERNATURE'] ?></option>
-                        <?php endforeach ?>
-                    </select>
-                </p>
-            </dd>
-        </dl>
-    </div>
-
-    <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
-        <input type='submit' value='Ajouter' class='btn btn-success' />
-        <input type='hidden' name='type_ressource' value='dossier' />
-    </div>
-
 </form>
 
 <script>
     $(document).ready(function() {
-
         // Gestion des multiselects
         $("select[name='types[]']").multiselect({header: false, noneSelectedText: "Tous les types"});
         $("select[name='categories[]']").multiselect({header: false, noneSelectedText: "Toutes les catégories"});
