--- a/application/views/scripts/users/edit.phtml
+++ b/application/views/scripts/users/edit.phtml
@@ -27,42 +27,47 @@
 
         <dt>Login</dt>
         <dd>
-        	<p>
-        		<input placeholder='Login de connexion ...' name='USERNAME_UTILISATEUR' value='<?php if(isset($this->user["USERNAME_UTILISATEUR"])) echo $this->user["USERNAME_UTILISATEUR"] ?>' type='text' />
-			</p>
+            <p>
+                <input class="form-control" placeholder='Login de connexion ...' name='USERNAME_UTILISATEUR' value='<?php if(isset($this->user["USERNAME_UTILISATEUR"])) echo $this->user["USERNAME_UTILISATEUR"] ?>' type='text' />
+            </p>
     	</dd>
 
         <dt>Mot de passe</dt>
         <dd>
-            <p>
-                <?php if( $this->add ) : ?>
-                    <input placeholder='Mot de passe' name='PASSWD_INPUT' type='password' />
-                    <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' /><?php endif ?>
-                <?php else : ?>
-                    <input placeholder='Mot de passe' name='PASSWD_INPUT' type='password' disabled value='<?php echo $this->user["PASSWD_UTILISATEUR"] ?>' />
-                    <a href='#' id='change_passwd' >Changer le mot de passe</a>
-                    <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' <?php if($this->user["PASSWD_UTILISATEUR"] == null) echo "checked"?> /><?php endif ?>
-                <?php endif ?>
-            </p>
-            <?php if (getenv('PREVARISC_ENFORCE_SECURITY') == 1): ?>
-            <p id="password_instructions" style="<?php echo $this->add ? '' : 'display:none' ?>">
-                Le mot de passe doit contenir au moins 8 caractères
-                dont 1 minuscule, 1 majuscule, 1 chiffre et 1 caractère spécial.
-            </p>
+            <?php if( $this->add ) : ?>
+                <input class="form-control" placeholder='Mot de passe' name='PASSWD_INPUT' type='password' />
+                <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' /><?php endif ?>
+            <?php else : ?>
+                <!-- @fixme: Voir pour le comportement quand on clique sur le bouton -->
+                <div class="input-group">
+                    <input class="form-control" placeholder='Mot de passe' name='PASSWD_INPUT' type='password' disabled value='<?php echo $this->user["PASSWD_UTILISATEUR"] ?>' />
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" id='change_passwd' >Changer le mot de passe</button>
+                    </span>
+                </div>
+                <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' <?php if($this->user["PASSWD_UTILISATEUR"] == null) echo "checked"?> /><?php endif ?>
             <?php endif ?>
 
+            <?php if (getenv('PREVARISC_ENFORCE_SECURITY') == 1): ?>
+                <p id="password_instructions" style="<?php echo $this->add ? '' : 'display:none' ?>">
+                    Le mot de passe doit contenir au moins 8 caractères
+                    dont 1 minuscule, 1 majuscule, 1 chiffre et 1 caractère spécial.
+                </p>
+            <?php endif ?>
         </dd>
 
-        <dt>Groupe</dt>
-        <dd>
-        	<p>
-	            <select name='ID_GROUPE'>
-	                <?php foreach($this->groupes as $groupe) : ?>
-	                <option value="<?php echo $groupe['ID_GROUPE'] ?>" <?php if( $groupe['ID_GROUPE'] == $this->user['ID_GROUPE'] ) echo "selected" ?>><?php echo $groupe['LIBELLE_GROUPE'] ?></option>
-	                <?php endforeach ?>
-	            </select>
-            </p>
-        </dd>
+        <div class="mt-4">
+            <dt>Groupe</dt>
+            <dd>
+                <p>
+                    <select class="form-control" name='ID_GROUPE'>
+                        <?php foreach($this->groupes as $groupe) : ?>
+                        <option value="<?php echo $groupe['ID_GROUPE'] ?>" <?php if( $groupe['ID_GROUPE'] == $this->user['ID_GROUPE'] ) echo "selected" ?>><?php echo $groupe['LIBELLE_GROUPE'] ?></option>
+                        <?php endforeach ?>
+                    </select>
+                </p>
+            </dd>
+        </div>
 
         <dt>Utilisateur actif ?</dt>
         <dd>
@@ -75,15 +80,16 @@
         <dt>Dernière IP authentifiée</dt>
         <dd>
             <p>
-                <input type='text'  class="input-medium" name='IP_UTILISATEUR' maxlength="45" value='<?php echo $this->user["IP_UTILISATEUR"] ?>' />
+                <input type='text' class="form-control" name='IP_UTILISATEUR' maxlength="45" value='<?php echo $this->user["IP_UTILISATEUR"] ?>' />
             </p>
         </dd>
 
         <dt>Connexions en échec</dt>
         <dd>
-            <input type='number' min="0" class="input-mini" name='FAILED_LOGIN_ATTEMPTS_UTILISATEUR' value='<?php echo $this->user["FAILED_LOGIN_ATTEMPTS_UTILISATEUR"] ? : '0' ?>' />
+            <input type='number' min="0" class="form-control" name='FAILED_LOGIN_ATTEMPTS_UTILISATEUR' value='<?php echo $this->user["FAILED_LOGIN_ATTEMPTS_UTILISATEUR"] ? : '0' ?>' />
+            
             <?php if(getenv('PREVARISC_ENFORCE_SECURITY') == 1 && $this->user["FAILED_LOGIN_ATTEMPTS_UTILISATEUR"] >= 2): ?>
-            <a href='#' id='unlock' >Débloquer</a> les connexions autres qu'avec l'IP ci-dessus.
+                <a href='#' id='unlock' >Débloquer</a> les connexions autres qu'avec l'IP ci-dessus.
             <?php endif ?>
         </dd>
     </dl>
@@ -91,51 +97,83 @@
     <h4>Informations de l'utilisateur</h4>
     <dl class='dl-horizontal'>
     	<dt>Prénom</dt>
-		<dd>
-			<input type='text' name='PRENOM_UTILISATEURINFORMATIONS' value='<?php echo htmlspecialchars($this->user['infos']["PRENOM_UTILISATEURINFORMATIONS"], ENT_QUOTES) ?>' />
+		<dd class="row">
+            <div class="col-md-12">
+                <p>
+                    <input class="form-control" type='text' name='PRENOM_UTILISATEURINFORMATIONS' value='<?php echo htmlspecialchars($this->user['infos']["PRENOM_UTILISATEURINFORMATIONS"], ENT_QUOTES) ?>' />
+                </p>
+            </div>
 		</dd>
 
 		<dt>Nom</dt>
-		<dd>
-			<input type='text' name='NOM_UTILISATEURINFORMATIONS' value='<?php echo htmlspecialchars($this->user['infos']["NOM_UTILISATEURINFORMATIONS"], ENT_QUOTES) ?>' />
+		<dd class="row">
+            <div class="col-md-12">
+                <p>
+                    <input class="form-control" type='text' name='NOM_UTILISATEURINFORMATIONS' value='<?php echo htmlspecialchars($this->user['infos']["NOM_UTILISATEURINFORMATIONS"], ENT_QUOTES) ?>' />
+                </p>
+            </div>
 		</dd>
 
     	<dt>Fonction</dt>
-		<dd>
-			<select name='ID_FONCTION' >
-				<?php foreach($this->fonctions as $fonction) : ?>
-					<option value='<?php echo $fonction["ID_FONCTION"] ?>' <?php if(($fonction["ID_FONCTION"] == $this->user['infos']["ID_FONCTION"])) echo "selected" ?> >
-						<?php echo $fonction["LIBELLE_FONCTION"] ?>
-					</option>
-				<?php endforeach ?>
-			</select>
+		<dd class="row">
+            <div class="col-md-12">
+                <p>
+                    <select class="form-control" name='ID_FONCTION'>
+                        <?php foreach($this->fonctions as $fonction) : ?>
+                            <option value='<?php echo $fonction["ID_FONCTION"] ?>' <?php if(($fonction["ID_FONCTION"] == $this->user['infos']["ID_FONCTION"])) echo "selected" ?> >
+                                <?php echo $fonction["LIBELLE_FONCTION"] ?>
+                            </option>
+                        <?php endforeach ?>
+                    </select>
+                </p>
+            </div>
 		</dd>
 
-		<dt class='grade_user' >Grade</dt>
-		<dd class='grade_user' >
-			<input type='text' name='GRADE_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["GRADE_UTILISATEURINFORMATIONS"] ?>' />
+		<dt class='grade_user'>Grade</dt>
+		<dd class='grade_user row'>
+            <div class="col-md-12">
+                <p>
+			        <input class="form-control" type='text' name='GRADE_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["GRADE_UTILISATEURINFORMATIONS"] ?>' />
+                </p>
+            </div>
 		</dd>
 
 		<dt>Téléphones</dt>
-		<dd>
-			<input type='text' name='TELFIXE_UTILISATEURINFORMATIONS' placeholder='Téléphone fixe ...' value='<?php echo $this->user['infos']["TELFIXE_UTILISATEURINFORMATIONS"] ?>' /><br/>
-			<input type='text' name='TELPORTABLE_UTILISATEURINFORMATIONS' placeholder='Portable ...' value='<?php echo $this->user['infos']["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>' />
-			<input type='text' name='TELFAX_UTILISATEURINFORMATIONS' placeholder='Fax ...' value='<?php echo $this->user['infos']["TELFAX_UTILISATEURINFORMATIONS"] ?>' /><br/>
+		<dd class="row">
+            <div class="col-md-6">
+			    <input class="form-control" type='text' name='TELFIXE_UTILISATEURINFORMATIONS' placeholder='Téléphone fixe ...' value='<?php echo $this->user['infos']["TELFIXE_UTILISATEURINFORMATIONS"] ?>' /><br/>
+            </div>
+            <div class="col-md-6">
+			    <input class="form-control" type='text' name='TELPORTABLE_UTILISATEURINFORMATIONS' placeholder='Portable ...' value='<?php echo $this->user['infos']["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>' />
+            </div>
+            <div class="col-md-12">
+			    <input class="form-control" type='text' name='TELFAX_UTILISATEURINFORMATIONS' placeholder='Fax ...' value='<?php echo $this->user['infos']["TELFAX_UTILISATEURINFORMATIONS"] ?>' /><br/>
+            </div>
 		</dd>
 
 		<dt>Courriel</dt>
-		<dd>
-			<input type='text' name='MAIL_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["MAIL_UTILISATEURINFORMATIONS"] ?>' />
+		<dd class="row">
+            <div class="col-md-12">
+                <p>
+                    <input class="form-control" type='text' name='MAIL_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["MAIL_UTILISATEURINFORMATIONS"] ?>' />
+                </p>
+            </div>
 		</dd>
 
 		<dt>Site Web</dt>
-		<dd>
-			<input type='text' name='WEB_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["WEB_UTILISATEURINFORMATIONS"] ?>' />
+            <dd class="row">
+            <div class="col-md-12">
+                <p>
+                    <input class="form-control" type='text' name='WEB_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["WEB_UTILISATEURINFORMATIONS"] ?>' />
+                </p>
+            </div>
 		</dd>
 
 		<dt>Adresse</dt>
-		<dd>
-			<textarea name='OBS_UTILISATEURINFORMATIONS' style="width: 100%"><?php if(isset($this->user['infos']["OBS_UTILISATEURINFORMATIONS"])) echo $this->user['infos']["OBS_UTILISATEURINFORMATIONS"] ?></textarea>
+		<dd class="row">
+            <div class="col-md-12">
+                <textarea class="form-control" name='OBS_UTILISATEURINFORMATIONS' style="width: 100%"><?php if(isset($this->user['infos']["OBS_UTILISATEURINFORMATIONS"])) echo $this->user['infos']["OBS_UTILISATEURINFORMATIONS"] ?></textarea>
+            </div>
 		</dd>
 	</dl>
 
@@ -144,8 +182,8 @@
         <dt>Commune</dt>
         <dd>
         	<p>
-	            <select name='NUMINSEE_COMMUNE'>
-	                <option value="null">Définir une commune ..</option>
+	            <select class="form-control" name='NUMINSEE_COMMUNE'>
+	                <option value="null">Définir une commune ...</option>
 	                <?php foreach($this->communes as $commune) : ?>
 	                <option value="<?php echo $commune['NUMINSEE_COMMUNE'] ?>" <?php if( $commune['NUMINSEE_COMMUNE'] == $this->user['NUMINSEE_COMMUNE'] ) echo "selected" ?>><?php echo $commune['LIBELLE_COMMUNE'] ?></option>
 	                <?php endforeach ?>
@@ -156,23 +194,24 @@
         <dt>Commissions</dt>
         <dd>
         	<p>
-	            <select name='commissions[]' class="chosen input-xxlarge" data-placeholder="Commissions" multiple="multiple">
+	            <select name='commissions[]' class="chosen input-lg" data-placeholder="Commissions" multiple="multiple">
 	                <?php $previous_type = null ?>
-                        <?php foreach($this->commissions as $commission) : ?>
-                            <?php if (!$previous_type): ?>
-                                <optgroup label="<?php echo $commission['LIBELLE_COMMISSIONTYPE'] ?>">
-                            <?php elseif ($previous_type != $commission['ID_COMMISSIONTYPE']): ?>
-                                </optgroup>
-                                <optgroup label="<?php echo $commission['LIBELLE_COMMISSIONTYPE'] ?>">
-                            <?php endif ?>
-                            <option value="<?php echo $commission['ID_COMMISSION'] ?>" <?php if( $this->user['commissions'] != null && in_array($commission, $this->user['commissions']) ) echo "selected" ?>>
-                                <?php echo $commission['LIBELLE_COMMISSION'] . " (".$commission['LIBELLE_COMMISSIONTYPE'].")" ?>
-                            </option>
-                            <?php $previous_type = $commission['ID_COMMISSIONTYPE'] ?>
-	                <?php endforeach ?>
-                        <?php if ($previous_type): ?>
+                    <?php foreach($this->commissions as $commission) : ?>
+                        <?php if (!$previous_type): ?>
+                            <optgroup label="<?php echo $commission['LIBELLE_COMMISSIONTYPE'] ?>">
+                        <?php elseif ($previous_type != $commission['ID_COMMISSIONTYPE']): ?>
                             </optgroup>
+                            <optgroup label="<?php echo $commission['LIBELLE_COMMISSIONTYPE'] ?>">
                         <?php endif ?>
+                        <option value="<?php echo $commission['ID_COMMISSION'] ?>" <?php if( $this->user['commissions'] != null && in_array($commission, $this->user['commissions']) ) echo "selected" ?>>
+                            <?php echo $commission['LIBELLE_COMMISSION'] . " (".$commission['LIBELLE_COMMISSIONTYPE'].")" ?>
+                        </option>
+                        <?php $previous_type = $commission['ID_COMMISSIONTYPE'] ?>
+	                <?php endforeach ?>
+
+                    <?php if ($previous_type): ?>
+                        </optgroup>
+                    <?php endif ?>
 	            </select>
             </p>
         </dd>
@@ -181,43 +220,40 @@
         <dd>
         	<p>
 	            <select name='groupements[]' class="chosen input-xxlarge" data-placeholder="Groupements" multiple="multiple">
-                        <?php $previous_type = null ?>
+                    <?php $previous_type = null ?>
 	                <?php foreach($this->groupements as $groupement) : ?>
-                            <?php $selected = false; ?>
-                            <?php if ($this->user['groupements'] != null): ?>
-                                <?php foreach($this->user['groupements'] as $user_groupement): ?>
-                                    <?php if ($groupement['ID_GROUPEMENT'] == $user_groupement['ID_GROUPEMENT']): ?>
-                                        <?php $selected = true; ?>
-                                        <?php break; ?>
-                                    <?php endif ?>
-                                <?php endforeach ?>
-                            <?php endif ?>
-                            <?php if (!$previous_type): ?>
-                                <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
-                            <?php elseif ($previous_type != $groupement['ID_GROUPEMENTTYPE']): ?>
-                                </optgroup>
-                                <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
-                            <?php endif ?>
-                            <option value="<?php echo $groupement['ID_GROUPEMENT'] ?>" <?php echo $selected ? "selected" : '' ?>>
-                                <?php echo $groupement['LIBELLE_GROUPEMENT'] . " (" . $groupement['LIBELLE_GROUPEMENTTYPE'] . ") " ?>
-                            </option>
-                            <?php $previous_type = $groupement['ID_GROUPEMENTTYPE'] ?>
-	                <?php endforeach ?>
-                        <?php if ($previous_type): ?>
-                            </optgroup>
+                        <?php $selected = false; ?>
+                        <?php if ($this->user['groupements'] != null): ?>
+                            <?php foreach($this->user['groupements'] as $user_groupement): ?>
+                                <?php if ($groupement['ID_GROUPEMENT'] == $user_groupement['ID_GROUPEMENT']): ?>
+                                    <?php $selected = true; ?>
+                                    <?php break; ?>
+                                <?php endif ?>
+                            <?php endforeach ?>
                         <?php endif ?>
+                        <?php if (!$previous_type): ?>
+                            <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
+                        <?php elseif ($previous_type != $groupement['ID_GROUPEMENTTYPE']): ?>
+                            </optgroup>
+                            <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
+                        <?php endif ?>
+                        <option value="<?php echo $groupement['ID_GROUPEMENT'] ?>" <?php echo $selected ? "selected" : '' ?>>
+                            <?php echo $groupement['LIBELLE_GROUPEMENT'] . " (" . $groupement['LIBELLE_GROUPEMENTTYPE'] . ") " ?>
+                        </option>
+                        <?php $previous_type = $groupement['ID_GROUPEMENTTYPE'] ?>
+	                <?php endforeach ?>
+
+                    <?php if ($previous_type): ?>
+                        </optgroup>
+                    <?php endif ?>
 	            </select>
             </p>
         </dd>
     </dl>
-
 </form>
-
 
 <script>
     $(document).ready(function() {
-
-
     	// Gestion du changement du mot de passe et de la case à cocher LDAP
     	$('#change_passwd').click(function(e) {
             e.preventDefault();
