--- a/application/views/scripts/users/ressources-specialisees.phtml
+++ b/application/views/scripts/users/ressources-specialisees.phtml
@@ -9,7 +9,7 @@
     </li>
 </ul>
 
-<button type="button" onclick='$("#resource-ets-modal").modal({show: true});' class='btn btn-sm btn-info pull-right'>Ajouter une ressource</button>
+<button type="button" class='btn btn-sm btn-info pull-right' data-toggle="modal" data-target="#resource-ets-modal">Ajouter une ressource</button>
 
 <h4>Ressources liées aux établissements</h4>
 
@@ -34,7 +34,7 @@
     </tbody>
 </table>
 
-<button type="button" onclick='$("#resource-dossier-modal").modal({show: true});' class='btn btn-sm btn-info pull-right'>Ajouter une ressource</button>
+<button type="button" class='btn btn-sm btn-info pull-right' data-toggle="modal" data-target="#resource-dossier-modal">Ajouter une ressource</button>
 
 <h4>Ressources liées aux dossiers</h4>
 
