--- a/application/views/scripts/changement/index.phtml
+++ b/application/views/scripts/changement/index.phtml
@@ -1,6 +1,6 @@
 <form action="/changement" method="post">
     <div class='pull-right' >
-        <input type='button' class="btn see-balises" value="Voir les balises disponibles">
+        <button type='button' class="btn btn-default see-balises" data-toggle="modal" data-target="#liste-balises">Voir les balises disponibles</button>
         <input type='submit' class="btn btn-success" value="Modifier les messages">
     </div>
     <?php foreach($this->changements as $changement) : ?>
@@ -12,6 +12,24 @@
     <?php endforeach ?>
 </form>
 
+<div id="liste-balises" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3 class="modal-title">Liste des balises disponibles</h3>
+            </div>
+
+            <div class="modal-body"></div>
+
+            <div class="modal-footer">
+                <button type="button" data-dismiss="modal" class="btn btn-default">Fermer</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script type='text/javascript'>
     tinymce.init({
@@ -34,42 +52,13 @@
 
     $(document).ready(function() {
         $(".see-balises").click(function() {
-            var idEts = "<?php echo $this->etablissement['general']['ID_ETABLISSEMENT'] ?>";
-            var changement = $(this).attr("data-value");
-            var dialogAlerte = $('<div style="display:none;"></div>').appendTo('body');
-
-            dialogAlerte.dialog({
-                title: "Liste des balises disponibles",
-                modal: true,
-                autoOpen: false,
-                width: 600,
-                height: 'auto',
-                buttons: [
-                    {
-                        text: 'Fermer',
-                        class: 'btn',
-                        click: function() {
-                            dialogAlerte.html("");
-                            dialogAlerte.dialog("close");
-                        }
-                    }
-                ],
-                close: function(event, ui){
-                    dialogAlerte.html("");
-                    dialogAlerte.dialog("close");
-                }
-            });
             $.ajax({
-                type: "POST",
+                type: "GET",
                 url: "/changement/balises",
-                data: { "id_etablissement": idEts, "changement": changement },
                 success: function(msg){
-                    dialogAlerte.html(msg);
-                    dialogAlerte.dialog("open");
+                    $('#liste-balises .modal-body').html(msg);
                 },
             });
-            return false;
-
         });
     });
 </script>
