Tableau des périodicités

--- a/application/views/scripts/tableau-des-periodicites/index.phtml
+++ b/application/views/scripts/tableau-des-periodicites/index.phtml
@@ -34,21 +34,19 @@
 				<td style='width: 150px;' ><?php echo $categorie["LIBELLE_CATEGORIE"] ?></td>
 
 				<?php foreach( $array_types as $type) : ?>
-
 					<?php $periodicite = $this->tableau[$categorie["ID_CATEGORIE"]][$type["ID_TYPE"]]; ?>
 
 					<td style='text-align: center' >
 						<?php if(!in_array($type["ID_TYPE"], $localsommeil_types)) : ?>
-							<input type='text' size='3' maxlength='3' value='<?= $periodicite[0] ?: 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_0" ?>' />
+							<input class="form-control" type='text' size='3' maxlength='3' value='<?= $periodicite[0] ?: 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_0" ?>' />
 						<?php else : ?>
 							<input type='text' size='3' style='visibility: hidden' />
 						<?php endif ?>
 					</td>
 
 					<td style='text-align: center' >
-                        <input type='text' size='3' maxlength='3' value='<?= $periodicite[1] ?: 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_1" ?>' />
+                        <input class="form-control" type='text' size='3' maxlength='3' value='<?= $periodicite[1] ?: 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_1" ?>' />
 					</td>
-
 				<?php endforeach ?>
 			</tr>
 			<?php endforeach ?>
@@ -68,13 +66,11 @@
 		<tbody>
 			<tr>
 				<?php foreach( $this->array_classes as $classe) : ?>
-
 					<?php $periodicite = $this->tableau[0][$classe["ID_CLASSE"]]; ?>
 
 					<td style='text-align: center' >
-						<input type='text' size='3' maxlength='3' value='<?= $periodicite[0] ?: 0 ?>' name='<?php echo "0_".$classe["ID_CLASSE"]."_0" ?>' />
+						<input class="form-control" type='text' size='3' maxlength='3' value='<?= $periodicite[0] ?: 0 ?>' name='<?php echo "0_".$classe["ID_CLASSE"]."_0" ?>' />
 					</td>
-
 				<?php endforeach ?>
 			</tr>
 		</tbody>
@@ -83,13 +79,12 @@
 
     <p class='text-center'>
 		<input type='submit' id='submit' value='Sauvegarder' class='btn btn-success' />
-        <a href="/tableau-des-periodicites/apply" onClick="return confirm('Etes-vous sûr de vouloir appliquer ces paramètres à l\'ensemble des établissements ?');"class='btn btn-success'>Appliquer sur TOUS les établissements</a>
+        <a href="/tableau-des-periodicites/apply" onClick="return confirm('Etes-vous sûr de vouloir appliquer ces paramètres à l\'ensemble des établissements ?');"class='btn btn-primary'>Appliquer sur TOUS les établissements</a>
     </p>
 
 </form>
 
 <script type="text/javascript">
-
 	$("input[type=text]").change(function() {
 		if($(this).val() == "0") {
 			$(this).css("opacity", .5);
@@ -97,5 +92,4 @@
 			$(this).css("opacity", 1);
 		}
 	}).change();
-
 </script>
