--- a/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
+++ b/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
@@ -74,7 +74,7 @@
 
                             row.append(`
                                 <td>
-                                    <select form="form-${layers[i].internalName}-${format.replace(' ', '-')}" name="FORMAT_COUCHECARTO">
+                                    <select class="form-control" form="form-${layers[i].internalName}-${format.replace(' ', '-')}" name="FORMAT_COUCHECARTO">
                                     </select>
                                 </td>
                             `)
