--- a/application/views/scripts/couches-cartographiques/add.phtml
+++ b/application/views/scripts/couches-cartographiques/add.phtml
@@ -9,20 +9,26 @@
 	<dl class='dl-horizontal'>
 		<dt>Type de la couche</dt>
 		<dd>
-			<select name="TYPE_COUCHECARTO">
-				<option value="WMS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WMS') echo "selected" ?> >WMS</option>
-				<option value="WMTS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WMTS') echo "selected" ?> >WMTS</option>
-			</select>
+            <p>
+                <select class="form-control" name="TYPE_COUCHECARTO">
+                    <option value="WMS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WMS') echo "selected" ?> >WMS</option>
+                    <option value="WMTS" <?php if(isset($this->row) && $this->row['TYPE_COUCHECARTO'] == 'WMTS') echo "selected" ?> >WMTS</option>
+                </select>
+            </p>
 		</dd>
 
 		<dt>Nom de la couche</dt>
 		<dd>
-			<input type="text" name="NOM_COUCHECARTO" value="<?php echo $this->row ? $this->row['NOM_COUCHECARTO'] : "" ?>" />
+            <p>
+			    <input class="form-control" type="text" name="NOM_COUCHECARTO" value="<?php echo $this->row ? $this->row['NOM_COUCHECARTO'] : "" ?>" />
+            </p>
 		</dd>
 
 		<dt>URL du flux</dt>
 		<dd>
-			<input type="text" name="URL_COUCHECARTO" value="<?php echo $this->row ? $this->row['URL_COUCHECARTO'] : "" ?>" />
+            <p>
+			    <input class="form-control" type="text" name="URL_COUCHECARTO" value="<?php echo $this->row ? $this->row['URL_COUCHECARTO'] : "" ?>" />
+            </p>
 		</dd>
 
 		<dt>Couche de base ?</dt>
@@ -35,16 +41,20 @@
 
 		<dt>Nom de la couche dans le flux</dt>
 		<dd>
-			<input type="hidden" name="LAYERS_COUCHECARTO" value="0" />
-			<input type="text" name="LAYERS_COUCHECARTO" value="<?php echo isset($this->row) ? $this->row['LAYERS_COUCHECARTO'] : "" ?>" />
+            <p>
+                <input type="hidden" name="LAYERS_COUCHECARTO" value="0" />
+                <input class="form-control" type="text" name="LAYERS_COUCHECARTO" value="<?php echo isset($this->row) ? $this->row['LAYERS_COUCHECARTO'] : "" ?>" />
+            </p>
 		</dd>
 
 		<dt>Format de l'image de la couche</dt>
 		<dd>
-			<select name="FORMAT_COUCHECARTO">
-				<option value="image/png" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/png") echo "selected" ?> >image/png</option>
-				<option value="image/jpeg" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/jpeg") echo "selected" ?> >image/jpeg</option>
-			</select>
+            <p>
+                <select class="form-control" name="FORMAT_COUCHECARTO">
+                    <option value="image/png" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/png") echo "selected" ?> >image/png</option>
+                    <option value="image/jpeg" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/jpeg") echo "selected" ?> >image/jpeg</option>
+                </select>
+            </p>
 		</dd>
 
 		<dt>Couche masquée ?</dt>
