Bouton de retour en haut de page

--- a/application/layouts/dashboard.phtml
+++ b/application/layouts/dashboard.phtml
@@ -36,8 +36,8 @@
                   <?php echo $this->placeholder('after_content') ?>
                 </div>
             </div>
-            <button id="go-top" type="button" class="btn btn-default hide" onclick="scrollToTop()">
-                <i class="icon-arrow-up"></i>
+            <button id="go-top" type="button" class="btn btn-default" style="display: none;" onclick="scrollToTop()">
+                <i class="glyphicon glyphicon-arrow-up"></i>
             </button>
             <div class='row'>
                 <div class="col-md-12">
